Readme entrega